[tool.poetry]
name = "uwpath.backend"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.0.7"
djangorestframework = "3.11.0"
djangorestframework-jsonapi = "3.0.0"
django-cors-headers = "3.3.0"
postgres = "^3.0.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
